--- a/angular.json
+++ b/angular.json
@@ -44,25 +44,25 @@
           "strict": true
         }
       },
-      "root": "projects/example",
-      "sourceRoot": "projects/example/src",
+      "root": "example",
+      "sourceRoot": "example/src",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/example",
-            "index": "projects/example/src/index.html",
-            "main": "projects/example/src/main.ts",
-            "polyfills": "projects/example/src/polyfills.ts",
-            "tsConfig": "projects/example/tsconfig.app.json",
+            "index": "example/src/index.html",
+            "main": "example/src/main.ts",
+            "polyfills": "example/src/polyfills.ts",
+            "tsConfig": "example/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "projects/example/src/favicon.ico",
-              "projects/example/src/assets"
+              "example/src/favicon.ico",
+              "example/src/assets"
             ],
             "styles": [
-              "projects/example/src/styles.scss"
+              "example/src/styles.scss"
             ],
             "scripts": []
           },
@@ -82,8 +82,8 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "projects/example/src/environments/environment.ts",
-                  "with": "projects/example/src/environments/environment.prod.ts"
+                  "replace": "example/src/environments/environment.ts",
+                  "with": "example/src/environments/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
@@ -120,17 +120,17 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/example/src/test.ts",
-            "polyfills": "projects/example/src/polyfills.ts",
-            "tsConfig": "projects/example/tsconfig.spec.json",
-            "karmaConfig": "projects/example/karma.conf.js",
+            "main": "example/src/test.ts",
+            "polyfills": "example/src/polyfills.ts",
+            "tsConfig": "example/tsconfig.spec.json",
+            "karmaConfig": "example/karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "projects/example/src/favicon.ico",
-              "projects/example/src/assets"
+              "example/src/favicon.ico",
+              "example/src/assets"
             ],
             "styles": [
-              "projects/example/src/styles.scss"
+              "example/src/styles.scss"
             ],
             "scripts": []
           }
